# OOP-Galeev-Amir-lb4

./: Галеев Амир ООП.docx
ship_battle/: CMakeLists.txt  commands.json  save.json  ~$леев Амир ООП.docx
ship_battle/src/: main.cpp
ship_battle/src/headers/: Ability.h  AbilityManager.h  Bombardment.h  ConsoleDrawer.h  ConsoleInput.h  ConsoleManager.h  ConsoleOutput.h  DoubleDamage.h  Enemy.h  Exceptions.h  Game.h  GameBoard.h  GameController.h  GameState.h  JsonHandler.h  Player.h  Scanner.h  Ship.h  ShipManager.h  Structures.h
ship_battle/src/source/: AbilityManager.cpp  Bombardment.cpp  ConsoleDrawer.cpp  ConsoleInput.cpp  ConsoleManager.cpp  ConsoleOutput.cpp  DoubleDamage.cpp  Enemy.cpp  Game.cpp  GameBoard.cpp  GameController.cpp  GameState.cpp  JsonHandler.cpp  Player.cpp  Scanner.cpp  Ship.cpp  ShipManager.cpp
